@@ -1646,6 +1646,13 @@ return state_change.object.content_unlock_locked_before_abandon(state_change)
                         'CPSPortlets', 'CPS Portlets Tool')
         self.log("Adding cps default portlets")
         portlets = (
+               {'type': 'Custom Portlet',
+                'slot': 'toptabs',
+                'custom_cache_params': [],
+                'order': 0,
+                'render_method': 'generic_lib_accessibility',
+                'Title': 'Hidden access keys',
+                },
                {'type': 'Navigation Portlet',
                 'slot': 'toptabs',
                 'end_depth': 3,
@@ -1658,6 +1665,7 @@ return state_change.object.content_unlock_locked_before_abandon(state_change)
                 'order': 0,
                 'Title': 'Breadcrumbs',
                 },
+               # Left column
                {'type': 'Custom Portlet',
                 'slot': 'left',
                 'order': 0,
@@ -1665,6 +1673,12 @@ return state_change.object.content_unlock_locked_before_abandon(state_change)
                 'render_method': 'portlet_session_info',
                 'Title': 'Session',
                },
+               {'type': 'Language Portlet',
+                'slot': 'left',
+                'action': 'change',
+                'Title': 'Language selector',
+                'order': 2,
+                },
                {'type': 'Actions Portlet',
                 'slot': 'left',
                 'order': 10,
@@ -1677,6 +1691,14 @@ return state_change.object.content_unlock_locked_before_abandon(state_change)
                 'categories': ['global'],
                 'Title': 'Portal actions',
                 },
+               {'type': 'Navigation Portlet',
+                'slot': 'left',
+                'order': 50,
+                'display': 'navigation_tree',
+                'show_icons': 1,
+                'Title': 'Navigation',
+                },
+               # Right column
                {'type': 'Actions Portlet',
                 'slot': 'right',
                 'order': 10,
@@ -1689,6 +1711,7 @@ return state_change.object.content_unlock_locked_before_abandon(state_change)
                 'categories': ['object', 'workflow'],
                 'Title': 'Object actions',
                 },
+               # Bottom slots
                {'type': 'Text Portlet',
                 'slot': 'bottom',
                 'Title': 'Copyright',
@@ -1698,23 +1721,18 @@ return state_change.object.content_unlock_locked_before_abandon(state_change)
                 'order': 0,
                 },
                {'type': 'Custom Portlet',
+                'slot': 'bottom',
+                'custom_cache_params': [],
+                'order': 10,
+                'render_method': 'portlet_contact_info',
+                'Title': 'Contact Info',
+                },
+               {'type': 'Custom Portlet',
                 'slot': 'bottom2',
                 'custom_cache_params': [],
                 'order': 10,
                 'render_method': 'portlet_conformance_statement',
                 'Title': 'Conformance statement',
-                },
-               {'type': 'Language Portlet',
-                'slot': 'left',
-                'action': 'change',
-                'Title': 'Language selector',
-                },
-               {'type': 'Navigation Portlet',
-                'slot': 'left',
-                'order': 50,
-                'display': 'navigation_tree',
-                'show_icons': 1,
-                'Title': 'Navigation',
                 },
 
         )
