@@ -1,0 +1,12 @@
+<ul tal:define="utool nocall:here/portal_url;
+                base_url python:utool.getBaseUrl()"
+  class="contactInfo doNotPrint">
+  <li>
+    <a i18n:translate="" tal:attributes="href
+      string:mailto:${here/portal_properties/email_from_address}?subject=Info">action_contact</a>
+  </li>
+  <li>
+    <a tal:attributes="href string:${base_url}accessibility"
+      i18n:translate="">action_accessibility</a>
+  </li>
+</ul>
