@@ -513,6 +513,11 @@ div.box a.selected {
   margin: 1em;
 }
 
+.contactInfo li {
+  display: inline;
+  margin: 1em;
+}
+
 <dtml-comment>
 CMF Calendar
 </dtml-comment>
