@@ -19,6 +19,7 @@ Bug fixes:
 - revert [27616]
 - Made CPSOOo installation in cpsinstall.py not hide the import error by
   displaying the exact import error message. This partly fixes #1037.
+- #983: adding new custom portlet for (hidden) accesskeys
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 - Small refactoring of folder_localrole_edit.py to move setting `reindex` out
